# trade-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start_mcp_server.bat  test_mcp.bat  test_server.py
resources/: DEBUGGING_GUIDE.md
resources/context/: session-scratchpad.md
resources/development_plan/: trading_mcp_agile_mvp_plan_2025-01-06.md
resources/prd/: trading-mcp-prd-2025-01-06.md
resources/prompts/: mcp.txt
scripts/: README.md  demo_client.py  interactive_client.py  mcp_test_client.py  simple_test.py  start_mcp_minimal.bat  test_direct.py  test_known_indices.py  test_multiple_indices.py  test_nsei_fix.py  test_real_nsei_volume.py  test_scenarios.py  test_volume_patterns.py
src/trading_mcp/: __init__.py  logging_config.py  server.py  stock_data.py
test_data/: sample_stock_data.py
tests/: test_mcp_server.py  test_stock_data.py
